# api/routes/pets.js
@@ -7,14 +7,14 @@ module.exports = (app) => {
     app.use("/pets", route)
 
     route.get('/', function(req, res, next) {
-        res.json(service.all()).status(200);
+        res.json(service.all())
     });
 
     route.post('/', function(req, res, next) {
-        res.json(service.add(req.query.name, req.query.breed, req.query.age)).status(200);
+        res.json(service.add(req.query.name, req.query.breed, req.query.age))
     });
 
     route.get('/:name', function(req, res, next) {
-        res.json(service.get(req.params.name)).status(200);
+        res.json(service.get(req.params.name))
     });
 };
